294736  Valgrind crashes with Unrecognised instruction 0x48 0xF 0xD7 0xD6 0x48 0x83
294812  patch allowing to run (on x86 at least) helgrind/drd on tool.
295089  can not annotate source for both helgrind and drd
295221  POWER Processor decimal floating point instruction support missing
295428  coregrind/m_main.c has incorrect x86 assembly for darwin
295799  Missing \n with get_vbits in gdbserver when line is % 80 and there are some unaddressable bytes 
296422  Add translation chaining support
296457  vex amd64->IR: 0x66 0xF 0x3A 0xDF 0xD1 0x1 0xE8 0x6A (dup of AES)
296983  Fix build issues on x86_64/ppc64 without 32-bit toolchains
n-i-bz  s390x: Shadow registers can now be examined using vgdb
297078  gdbserver signal handling problems caused by diff vki nr/gdb nr
        and non reset of "C-ontinued" signal
297147  drd false positives on newly allocated memory
297329  VEX should disallow decoding of IBM Power Decimal Floating Point 
        instructions on machines that do not support it
297497  POWER Processor decimal floating point instruction support missing
297976  s390x: revisit EX implementation
297911  valgrind does not report 'invalid write' when using APIs for custom memory allocators.
297991  Valgrind interferes with mmap()+ftell() 
297992  Support systems missing WIFCONTINUED (e.g. pre-2.6.10 Linux) 
297993  Fix compilation of valgrind with gcc -g3.
298080  POWER Processor decimal floating point instruction support missing, part 3
298354  Unhandled ARM Thumb instruction 0xEB0D 0x0585 (streq)
298394  s390x: Don't bail out on an unknown machine model. Assume it's a new model.
298421  accept4() syscall (366) support is missing for ARM
298718  vex amd64->IR: unhandled instruction bytes: 0xF 0xB1 0xCB 0x9C 0x8F 0x45
298732  valgrind installation problem in ubuntu with kernel version 3.x
298862  POWER Processor decimal floating point instruction support missing, part 4
298864  DWARF reader mis-parses DW_FORM_ref_addr